--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,10 @@ target 'Aura' do
   use_react_native!(:path => config["reactNativePath"])
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  
+
+
 
   target 'AuraTests' do
     inherit! :complete
